<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Ui.register.Register"
    android:gravity="center">


    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/register"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_register"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="none">

            <EditText
                android:id="@+id/ed_register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_edittext"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/nameHint"
                android:autofillHints="name"
                android:paddingLeft="16dp"
                android:paddingTop="9dp"
                android:paddingRight="16dp"
                android:textSize="14sp"
                android:inputType="text"
                android:singleLine="true"
                android:maxLength="50"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearlayout1"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="none">

            <EditText
                android:id="@+id/ed_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_edittext"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/emailHint"
                android:autofillHints="emailAddress"
                android:paddingLeft="16dp"
                android:paddingTop="9dp"
                android:paddingRight="16dp"
                android:textSize="14sp"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearlayout2"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/password" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:boxBackgroundMode="none">

            <com.example.funstory.Ui.PasswordInput
                android:alpha="1"
                android:id="@+id/ed_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintPassword"
                android:inputType="textPassword"
                android:background="@drawable/login_edittext"
                android:paddingLeft="16dp"
                android:paddingTop="9dp"
                android:paddingRight="16dp"
                android:textColor="@color/black"
                />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>


    <Button
        android:background="@drawable/button_shape"
        android:id="@+id/btn_signup"
        android:layout_below="@id/linearlayout3"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:progressTint="@color/blue_dark"
        />


    <LinearLayout
        android:layout_below="@id/btn_signup"
        android:layout_height="wrap_content"
        android:layout_marginBottom="57dp"
        android:layout_marginEnd="81dp"
        android:layout_marginStart="81dp"
        android:layout_marginTop="71dp"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <TextView
            android:fontFamily="@font/inter_regular"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/account_question2" />

        <TextView
            android:fontFamily="@font/inter_bold"
            android:id="@+id/sign_in"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:text="@string/log_in"
            android:textColor="@color/blue_dark" />

    </LinearLayout>



</RelativeLayout>